tests/vertical-slice/reject/opaque_handle_construct.hew
// Reject fixture: opaque_handle_construct — userspace cannot construct an
// `#[opaque]` runtime handle directly; it is produced only via FFI. An opaque
// handle has no constructible record layout (it is never registered in the
// field-order table — it lowers to `ptr`), so a `StructInit` is refused
// fail-closed at the CHECKER boundary with E_OPAQUE_CONSTRUCT. It can only be
// produced by an `extern "C"` function returning the runtime's `*mut T`.
//
// Harness verb: hew check
// Expected: rejected with E_OPAQUE_CONSTRUCT (clean checker error, not MIR NYI).
#[opaque]
type Handle {
}

fn main() -> i64 {
    let _h: Handle = Handle {  };
    0
}
